--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@ DB_PASSWORD=
 DB_USER=root
 
 DROP_AND_RECREATE_DB=false
-CORS_DOMAIN=http://localhost:3001/
+CORS_DOMAIN=http://localhost:3000,https://editor.swagger.io
 
 JWT_SECRET=MySecretKey123
 
