--- a/.env
+++ b/.env
@@ -1,14 +1,14 @@
-NODE_ENV=development
-PORT=3000
+NODE_ENV=
+PORT=
 
-DB_NAME=StudentAdmin
-DB_HOST=127.0.0.1
+DB_NAME=
+DB_HOST=
 DB_PASSWORD=
-DB_USER=root
+DB_USER=
 
 DROP_AND_RECREATE_DB=false
-CORS_DOMAIN=http://localhost:3000,https://editor.swagger.io
+CORS_DOMAIN=
 
-JWT_SECRET=MySecretKey123
+JWT_SECRET=
 
-WEB_APP_URL=http://localhost:3000
+WEB_APP_URL=
